--- a/index.html
+++ b/index.html
@@ -1,7 +1,192 @@
+<!-- Defines the document type so variety of browsers can interpret the code the same way -->
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  
+	<!-- Starts the HTML header area -->
+	<head>
+		
+		<!-- Starts and ends the HTML title (appears on the browser title bar)-->
+		<title>Portfolio</title>
+		<div>
+			<p style = "text-align: center; font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-size: 42px; color: #ffffff; padding-top: none">
+				Alejandro's Portfolio
+			</p>
+		</div>		
+		
+		<!--Needed to use the drop down botton menu -->	
+		<link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<meta name = "copyright" content = "2019">
+
+		<!-- Declares styles for different elements of the webpage, using CSS syntax. Edit this stuff to customize your styling and feel free to add other style elements-->
+		<style type = "text/css">
+
+			body {
+				font-family: font-family: Arial, Helvetica, sans-serif; font-weight: bold;
+				text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;			
+			}
+			
+			.navbar {
+				overflow: hidden;
+				background-color: #333;
+				text-shadow: 0px 0 black, 0 0px black, 0px 0 black, 0 0px black;
+			}
+			
+			.navbar a {
+				float: left;
+				font-size: 19px;
+				color: #ffffff;
+				text-align: center;
+				padding: 20px 16px;
+				text-decoration: none;
+				border-right: 1px solid #ffffff;
+			}
+
+			.dropdown {
+				float: left;
+				overflow: hidden;
+			}
+
+			.dropdown .dropbtn {
+				font-size: 19px;  
+				border: none;
+				outline: none;
+				color: #ffffff;
+				padding: 20px 16px;
+				background-color: inherit;
+				font-family: inherit;
+				font-weight: bold;
+				margin: 0;
+				border-right: 1px solid #ffffff;
+			}
+
+			.navbar a:hover, .dropdown:hover .dropbtn {
+				background-color: gray;
+
+			}
+
+			.dropdown-content {
+				display: none;
+				position: absolute;
+				background-color: #333;
+				min-width: 14px;
+				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+				z-index: 1;
+			}
+
+			.dropdown-content a {
+				float: none;
+				color: #ffffff;
+				padding: 12px 16px;
+				text-decoration: none;
+				display: block;
+				text-align: left;
+				font-size: 17px;
+			}
+
+			.dropdown:hover .dropdown-content {
+				display: block;
+			}
+						
+		</style>			
+		
+	<!-- Ends the HTML header section -->  
+	</head>
+ 
+	<!-- Starts the HTML body area-->
+	<body background = "http://i.imgur.com/PC5cUPT.jpg">
+
+		<!--Creates the nav bar, dropdown menus linking to author's info and to projects-->
+		<div class = "navbar">
+			<a style = "background-color: green" href = "https://students.washington.edu/montej2/Portfolio.html">HOME</a>
+			<div class = "dropdown">
+				<button class = "dropbtn">AUTHOR
+					<i class = "fa fa-caret-down"></i>
+				</button>
+				<div class = "dropdown-content">
+					<ul>
+						<a href = "https://geography.washington.edu/news/2018/06/04/alejandro-montesinos-receives-omad-merit-award" target = "_blank"><li>OMA&#38;D Merit Award</li></a>
+						<a href = "https://students.washington.edu/montej2/Montesinos-Dean-List-Letter.pdf" target = "_blank"><li>Dean's List Letter</li></a>
+						<a href = "https://students.washington.edu/montej2/PortfolioResume.pdf" target = "_blank"><li>Resume</li></a>
+						<!--<a href = "#AUTHOR"><li>About the Author</li></a>-->	
+					</ul>
+				</div>
+			</div>	
+					
+			<div class = "dropdown">
+				<button class = "dropbtn">PROJECTS
+					<i class = "fa fa-caret-down"></i>
+				</button>
+				<div class = "dropdown-content">	
+					<ul>
+						<a href = "https://students.washington.edu/montej2/King-County-Population.html"><li>Population Change in King County</li></a>
+						<a href = "https://students.washington.edu/montej2/King-County-Income.html"><li>Median Income in King County</li></a>
+						<a href = "https://students.washington.edu/montej2/Population-Density.html"><li>Population Density in King County</li></a>
+						<a href = "https://students.washington.edu/montej2/Kids-Project.html"><li> WA Boundaries and Counties for Kids</li></a>
+						<a href = "https://students.washington.edu/montej2/Geography-Classes.html"><li>UW Classes</li></a>
+						<a href = "https://students.washington.edu/montej2/Digital-Geographies.html"><li>Digital Geographies Course</li></a>
+					</ul>	
+				</div>
+			</div>		
+		</div>
+		
+		<!--
+		<div id = "title1"
+			<div style = "text-align: center; font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-size: 30px; padding-top: 20px; padding-bottom: 15px;">
+		</div>-->
+		
+		<div id = "text1"
+			<div style = "text-align: left; font-size: 19px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+				<p style = "color: #ffffff;">The intended purpose of this website is to showcase some of the projects I did during<br> my academic career as well
+					as to show my resume and accomplishments.<br></br>
+					My education and project experience prepares me to:<br>
+				</p>	
+			<ul style = "list-style-type:disc; color: #ffffff; font-size: 19px;">
+				<li>Create and/or modify maps</li>
+				<li>Reference data externally and internally</li>
+				<li>Edit and write code in HTML, CSS, JavaScript, and Java</li>
+				<li>Visualize, analyze and display data in QGIS, ARCGIS and other platforms</li>
+				<li>Collect and/or edit data either by trips to the field, aided by an app, or through a website like Google Maps or GeoJson.io</li>				
+			</ul>
+			
+		</div>
+
+		<div id = "AUTHOR">
+			<div style = "text-align: left; font-family: Arial, Helvetica, sans-serif; font-weight: bold">
+				<p style = "color: #ffffff; font-size: 30px">About the author:
+					<p style = "color: #ffffff;  font-size: 19px">I am a Geographic Information Systems &#40;GIS&#41; student at the University of Washington. 
+						<br>I also hold an Associates of Arts Degree in Business from Lake Washington Institute of Technology.<br></br>Some of my interests are: 
+					</p>
+					<ul style = "list-style-type:disc; color: #ffffff; font-size: 19px;">
+						<li>Information Technology</li>
+						<li>Web Design</li>
+						<li>Data Driven decisions</li>
+						<li>Coding</li>
+						<li>Statistical Analysis</li>
+						<li>Transportation Planning</li>
+						<li>Land Development</li>
+						<li>Green Infrastructures</li>
+						<li>Social Equity</li>
+						<li>Indigeneity</li>						
+					</ul>
+				</p>	
+			</div>			
+		</div>
+		
+	<!-- Ends the HTML body area -->  
+	</body>
+	
+		<div class = "hbutton">
+			<p>
+				<a href = "https://students.washington.edu/montej2/Portfolio.html" style = "color: #ffffff; font-size: 25px; float:right">			
+					<h1>Back to Top</h1>			
+				</a>
+			</p>
+		</div>
+		<br></br>
+		
+		<div style = "text-align: right; color: #ffffff;">&copy; Image reddit Inc.</div>  	
+
+<!--This document was written by Emma Slager, PhD student at the University of Washington-->
+
+<!-- Ends the HTML file -->  
 </html>
