--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 		<!--Creates the nav bar, dropdown menus linking to author's info and to projects-->
 		<div class = "navbar">
-			<a style = "background-color: green" href = "https://students.washington.edu/montej2/Portfolio.html">HOME</a>
+			<a style = "background-color: green" href = "index.html">HOME</a>
 			<div class = "dropdown">
 				<button class = "dropbtn">AUTHOR
 					<i class = "fa fa-caret-down"></i>
