--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<div class = "dropdown-content">
 					<ul>
 						<a href = "https://geography.washington.edu/news/2018/06/04/alejandro-montesinos-receives-omad-merit-award" target = "_blank"><li>OMA&#38;D Merit Award</li></a>
-						<a href = "Montesinos-Dean-List-Letter" target = "_blank"><li>Dean's List Letter</li></a>
+						<a href = "Montesinos-Dean-List-Letter.pdf" target = "_blank"><li>Dean's List Letter</li></a>
 						<a href = "https://students.washington.edu/montej2/PortfolioResume.pdf" target = "_blank"><li>Resume</li></a>
 						<!--<a href = "#AUTHOR"><li>About the Author</li></a>-->	
 					</ul>
