--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
 				</button>
 				<div class = "dropdown-content">	
 					<ul>
-						<a href = "https://students.washington.edu/montej2/King-County-Population.html"><li>Population Change in King County</li></a>
-						<a href = "https://students.washington.edu/montej2/King-County-Income.html"><li>Median Income in King County</li></a>
-						<a href = "https://students.washington.edu/montej2/Population-Density.html"><li>Population Density in King County</li></a>
-						<a href = "https://students.washington.edu/montej2/Kids-Project.html"><li> WA Boundaries and Counties for Kids</li></a>
-						<a href = "https://students.washington.edu/montej2/Geography-Classes.html"><li>UW Classes</li></a>
-						<a href = "https://students.washington.edu/montej2/Digital-Geographies.html"><li>Digital Geographies Course</li></a>
+						<a href = "King-County-Population.html"><li>Population Change in King County</li></a>
+						<a href = "King-County-Income.html"><li>Median Income in King County</li></a>
+						<a href = "Population-Density.html"><li>Population Density in King County</li></a>
+						<a href = "Kids-Project.html"><li> WA Boundaries and Counties for Kids</li></a>
+						<a href = "Geography-Classes.html"><li>UW Classes</li></a>
+						<a href = "Digital-Geographies.html"><li>Digital Geographies Course</li></a>
 					</ul>	
 				</div>
 			</div>		
@@ -177,7 +177,7 @@
 	
 		<div class = "hbutton">
 			<p>
-				<a href = "https://students.washington.edu/montej2/Portfolio.html" style = "color: #ffffff; font-size: 25px; float:right">			
+				<a href = "index.html" style = "color: #ffffff; font-size: 25px; float:right">			
 					<h1>Back to Top</h1>			
 				</a>
 			</p>
