--- a/Geography-Classes.html
+++ b/Geography-Classes.html
@@ -139,7 +139,7 @@
 		
 		<div class = "hbutton">
 			<p>
-				<a href = "https://students.washington.edu/montej2/Portfolio.html" style = "float: right; font-size: 30px;">
+				<a href = "index.html" style = "float: right; font-size: 30px;">
 					<h1>HOME</h1>
 				</a>
 			</p>		
