--- a/Population-Density.html
+++ b/Population-Density.html
@@ -104,7 +104,7 @@
 		
 		<div class = "float: right; hbutton">
 			<p>
-				<a href = "https://students.washington.edu/montej2/Portfolio.html" style = "color: black; font-size: 30px; float: right">
+				<a href = "index.html" style = "color: black; font-size: 30px; float: right">
 					<h1>HOME</h1>
 				</a>
 			</p>
