--- a/Digital-Geographies.html
+++ b/Digital-Geographies.html
@@ -65,7 +65,7 @@
 			
 			<div class = "hbutton">
 				<p>
-					<a href = "index.html">
+					<a href = "index">
 						<h1 style = "float: right">HOME</h1>
 					</a>
 				</p>			
