--- a/Kids-Project.html
+++ b/Kids-Project.html
@@ -168,7 +168,7 @@
 			
 			
 			<div class = "hbutton">
-				<p><a href = "index.html">
+				<p><a href = "index">
 						<h1 style = "font: black; float: right; font-family: Comic Sans MS, cursive, sans-seriffont-size;">HOME</h1>
 					</a>
 				</p>
