--- a/King-County-Income.html
+++ b/King-County-Income.html
@@ -101,7 +101,7 @@
 			
 			<div class = "hbutton">
 				<p>	
-					<a href = "index.html" style = "color: black; font-size: 30px; float: right">
+					<a href = "index" style = "color: black; font-size: 30px; float: right">
 						<h1>HOME</h1>
 					</a>
 				</p>
