--- a/King-County-Population.html
+++ b/King-County-Population.html
@@ -152,7 +152,7 @@
 		
 		<div class = "hbutton">
 			<p>
-				<a href = "index.html" style = "color: black; font-size: 30px;">
+				<a href = "index" style = "color: black; font-size: 30px;">
 					<h1>HOME</h1>
 				</a>
 			</p>
