--- a/Geography-Classes.html
+++ b/Geography-Classes.html
@@ -146,12 +146,12 @@
 		</div>	
 		
 		<p class = "a": align = "center" style = "font-size: 19px"><b>
-			The idea behind this project was simple. Create a theme and apply previously learned concepts. My idea was to show some of the buildings where I took different courses
-			and whether these courses were related to my major (Geography.) Thus, I gathered all the data using geojson.io, saved it in my computer as a JavaScript file, and made 
-			the algorithm reference it internally. To separate the Geography related courses from the non-Geography courses, I created two buttons. One button displays in green 
-			the Geography courses and the other one displays in purple the non-Geography ones. Also, all the buildings have popup messages identifying the name of the building and course. 
-			I would like you to notice the level of precision in the shape of the buildings; geojson.io allows us to map buildings by obtaining precise geographical data 
-			(i.e. the latitude and longitude of any point in space.) Hint: To restart the original view, simply refresh the tab.
+			In this project, I created a theme and built on concepts from earlier projects. My idea was to show some of the buildings at the UW where I took courses
+			and whether these courses were related to my major (Geography.) I gathered all the data using GeoJSON.io, saved it in my computer as a JavaScript file, 
+			and made the algorithm reference it internally. To separate the Geography-related courses from the non-Geography courses, I created two buttons. 
+			One button displays the Geography courses in green. The other one displays the non-Geography courses in purple. Each of the buildings has a popup message
+			identifying the building name and the course. GeoJSON.io helped me map the building shapes by obtaining precise geographical data (the latitude and 
+			longitude of any point in space.) To restart the original view, refresh the tab.
 		</p>			
 		
 	</body>	
