--- a/Kids-Project.html
+++ b/Kids-Project.html
@@ -176,15 +176,16 @@
 			
 			<br></br>
 			<p class = "a": align = "center"><b>
-				Hey Kids!
-				On this website you can learn some fun facts about the counties of our beautiful State of Washington and their boundaries.
-				Below the map are three buttons: WA Counties, Seattle, and King County's Attractions. Each button displays different fun and iconic places.
-				Start by clicking "WA Counties." Use King County as your starting point. It is highlighted in red, and the rest of the counties are in gray.
-				How many more counties can you name? You can hover the cursor over a county to find out its name. 
-				By clicking the "Seattle" button, the boundaries of this great city will be highlighted in the color red. You can hover the cursor over the red area to see a message.
-				By clicking the "King County's Attractions" button you can zoom in to find three fun attractions located in that county. 
-				Hint: all three attractions are highlighted in the color green. Two of them are in the northern part of Seattle, and the third is in the Southeast area of Bellevue.
-				You can hover the cursor over each attraction to see a short description of each one. Hint: To restart the original view, simply refresh the tab.
+				This website was created to help kids (and others) learn fun facts about counties in the State of Washington and their boundaries. There are three 
+				buttons below the map: WA Counties, Seattle, and King County's Attractions. Each button displays different fun and iconic places. Instructions:<br>
+				
+				•	Start by clicking "WA Counties." Use King County as your starting point. It’s highlighted in red, and the rest of the counties are in gray.:
+				•	How many more counties can you name? Hover the cursor over a county to find out its name.:
+				•	Click the "Seattle" button to see the boundaries of the city highlighted in red. Hover your cursor over the red area to see a message.:
+				•	Click the "King County's Attractions" button, then zoom in to find three fun attractions located in the county.:
+					All three attractions are highlighted in green. Two of them are in the northern part of Seattle, and the third is in the Southeast area of 
+					Bellevue. Hover the cursor over each attraction to see a short description.:
+				•	To restart the original view, refresh the tab.
 			</p>
 						
 	</body>
