--- a/King-County-Income.html
+++ b/King-County-Income.html
@@ -108,8 +108,8 @@
 			</div>	
 			
 			<p class = "a": align = "center"><b>
-				In this assignment I learned how to load data from a data sever outside of my hardware via URL from King County Open GIS Data HUB, 
-				to style data to produce a choropleth map, and practiced adding the legend, the scale, and the north arrow using Leaflet plugins.
+				In this project, in addition to loading data from the King County Open GIS Data hub and producing a choropleth map, 
+				I added a legend, scale, and the north arrow using Leaflet plug-ins.
 			</p>
 	
 		</body>
