--- a/Population-Density.html
+++ b/Population-Density.html
@@ -111,10 +111,10 @@
 		</div>
 		
 		<p class = "a": align = "center"><b>
-			In this map I applied previously learned concepts, only this time I learned how to edit geometries and their attributes using QGIS. 
-			We used QGIS to edit the data because the file, from the King County Data Hub, exceeded the capabilities of GeoJSON to edit data. 
-			The legend shows heavily populated areas in dark brown and less densely populated areas in light brown. The units are person per square kilometer.
-			The density levels that were not significant (less than 1000) were assigned the color gray. 
+			In this map, I applied concepts learned previously, then edited geometries and their attributes using QGIS.  I used QGIS to edit the data because 
+			the file, from the King County Data Hub, exceeded the data-editing capabilities of GeoJSON. The legend shows heavily populated areas in dark brown 
+			and less densely populated areas in light brown. The units are person per square kilometer. The density levels that weren’t significant (less than 1000)
+			were assigned the color gray.
 		</p>
 				
 		
