--- a/index.html
+++ b/index.html
@@ -136,25 +136,27 @@
 		
 		<div id = "text1"
 			<div style = "text-align: left; font-size: 19px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
-				<p style = "color: #ffffff;">The intended purpose of this website is to showcase some of the projects I did during<br> my academic career as well
-					as to show my resume and accomplishments.<br></br>
-					My education and project experience prepares me to:<br>
+				<p style = "color: #ffffff;">This website shows some of the projects I worked on at the University of Washington. It also includes my resume
+					and some of my accomplishments.<br></br>
+					My education and project experience prepare me to:
+
 				</p>	
 			<ul style = "list-style-type:disc; color: #ffffff; font-size: 19px;">
-				<li>Create and/or modify maps</li>
+				<li>Create and modify maps.</li>
 				<li>Reference data externally and internally</li>
 				<li>Edit and write code in HTML, CSS, JavaScript, and Java</li>
 				<li>Visualize, analyze and display data in QGIS, ARCGIS and other platforms</li>
-				<li>Collect and/or edit data either by trips to the field, aided by an app, or through a website like Google Maps or GeoJson.io</li>				
+				<li>Collect and/or edit data either by trips to the field, aided by an app like Fulcrum, or through a website like Google Maps or GeoJson.io</li>				
 			</ul>
 			
 		</div>
 
 		<div id = "AUTHOR">
 			<div style = "text-align: left; font-family: Arial, Helvetica, sans-serif; font-weight: bold">
-				<p style = "color: #ffffff; font-size: 30px">About the author:
-					<p style = "color: #ffffff;  font-size: 19px">I am a Geographic Information Systems &#40;GIS&#41; student at the University of Washington. 
-						<br>I also hold an Associates of Arts Degree in Business from Lake Washington Institute of Technology.<br></br>Some of my interests are: 
+				<p style = "color: #ffffff; font-size: 30px">About me:
+					<p style = "color: #ffffff;  font-size: 19px">I have a Bachelor of Arts degree in Geography &#40;focus on Geographic Information Systems
+						&#40;GIS&#41;&#41; from the University of Washington in Seattle.
+						<br>I also have an Associates of Arts degree in Business from Lake Washington Institute of Technology.<br></br>My interests include: 
 					</p>
 					<ul style = "list-style-type:disc; color: #ffffff; font-size: 19px;">
 						<li>Information Technology</li>
