--- a/King-County-Population.html
+++ b/King-County-Population.html
@@ -159,10 +159,10 @@
 		</div>			
 		<br>
 		<p align = "center"><b>
-			With this map I learned two different ways to reference data. One way was to reference GeoJSON data locally saved as JavaScript files in my computer. 
-			The other method was loading data from a data sever outside of my hardware via URL from King County Open GIS Data HUB. Through making this map, I learned how to 
-			style data to produce a choropleth map, and how to allow users to go back and forth between data options (the buttons below the maps.) The population values are 
-			represented in the maps with lighter colors for small values and darker colors for larger values. Hint: To restart the original view, simply refresh the tab.
+			I used this map to reference data in two different ways. First, I referenced GeoJSON data locally, saved as JavaScript files on my computer. 
+			Then I loaded data from a server using a URL from the King County Open GIS Data hub. While making this map, I learned how to style data to produce 
+			a choropleth map that allows users to switch back and forth between data options (using the buttons below the maps.) Population in the maps 
+			is represented using lighter colors for small values and darker colors for larger values.<br>(Refresh the tab to restart the original view.)
 		</p>			
 			
 	</body>
