--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 						<a href = "https://geography.washington.edu/news/2018/06/04/alejandro-montesinos-receives-omad-merit-award" target = "_blank"><li>OMA&#38;D Merit Award</li></a>
 						<a href = "Montesinos-Dean-List-Letter.pdf" target = "_blank"><li>Dean's List Letter</li></a>
 						<a href = "PortfolioResume.pdf" target = "_blank"><li>Resume</li></a>
+						<a href = "Technical-Support-Fundamentals-Certificate.pdf" target = "_blank"><li>Google IT Technical Support Fundamentals Certificate</li></a>
 						<!--<a href = "#AUTHOR"><li>About the Author</li></a>-->	
 					</ul>
 				</div>
