--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 				</p>	
 			<ul style = "list-style-type:disc; color: #ffffff; font-size: 19px;">
 				<li>Create and modify maps.</li>
-				<li>Reference data externally and internally</li>
-				<li>Edit and write code in HTML, CSS, JavaScript, and Java</li>
-				<li>Visualize, analyze and display data in QGIS, ARCGIS and other platforms</li>
-				<li>Collect and/or edit data either by trips to the field, aided by an app like Fulcrum, or through a website like Google Maps or GeoJson.io</li>				
+				<li>Reference data externally and internally.</li>
+				<li>Edit and write code in HTML, CSS, JavaScript, and Java.</li>
+				<li>Visualize, analyze and display data in QGIS, ARCGIS and other platforms.</li>
+				<li>Collect and/or edit data either by trips to the field, aided by an app like Fulcrum, or through a website like Google Maps or GeoJson.io.</li>				
 			</ul>
 			
 		</div>
