--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 						<a href = "Montesinos-Dean-List-Letter.pdf" target = "_blank"><li>Dean's List Letter</li></a>
 						<a href = "PortfolioResume.pdf" target = "_blank"><li>Resume</li></a>
 						<a href = "Technical-Support-Fundamentals-Certificate.pdf" target = "_blank"><li>Google IT Technical Support Fundamentals Certificate</li></a>
+						<a href = "Contact-Tracing-Certificate.pdf" target = "_blank"><li>Contact Tracing-Certificate</li></a>						
 						<!--<a href = "#AUTHOR"><li>About the Author</li></a>-->	
 					</ul>
 				</div>
